# CameraEmulator

./: README.md
src/: CMakeLists.txt  circular_buffer.c  circular_buffer.h  crc.c  crc.h  crc.py  main.c  main.py  packages.c  packages.h  packets.py
test/: circular_buffer.c  circular_buffer.h  crc.c  crc.h  crc.py  main.c  main.py  packages.c  packages.h  packets.py
